chore: Fix sonarqube violations